--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,5 +20,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 <script src="{% static "main.js" %}"></script>
+{% block javascript %}
+{% endblock %}
 </body>
 </html>
